<resources>
    <string name="app_name">Prank Pulse</string>
    <string name="facebook_app_id">kfmakfdjkfdj</string>
    <string name="adAppId">ca-app-pub-5408720375342272~8141715526</string>
    <string name="get_ready_to_add_a_dash_of_humor_to_your_day_with_our_collection_of_hilarious_prank_sounds">Get ready to add a dash of humor to your day with our collection of <b>hilarious prank sounds.</b></string>
    <string name="prankpulse">Prank<![CDATA[<b><font color=#FF0000>Pulse</font></b>]]></string>
    <string name="prankpulse_with_column">Prank<![CDATA[<b><font color=#FF0000>Pulse:</font></b>]]></string>
    <string name="get_started">Get Started</string>
    <string name="next_sound">Next Sound</string>
    <string name="play">Play</string>
    <string name="termsCondition">T&amp;C</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="cookies">Cookie Policy</string>
    <string name="tnc_span">By using the app you agree to our T&amp;C, Privacy Policy and Cookie Policy.</string>
    <string name="tnc_and_cookies_span"> T&amp;C, Privacy Policy and Cookie Policy.</string>
    <string name="tnc_validate_msg">Please tick mark the checkbox to proceed</string>
    <string name="enjoy_spreading_laughter_and_creating_unforgettable_moments">Enjoy spreading laughter and creating unforgettable moments.</string>
    <string name="image">Image</string>
    <string name="get_ready_to_be_the_life_of_the_party">Get ready to be the life of the party!</string>
    <string name="how_to_use">How to Use</string>
    <string name="select_your_sound">3. Select Your Sound:</string>
    <string name="browse_the_sounds">2. Browse the Sounds:</string>
    <string name="launch_prankpluse">1. Launch PrankPulse:</string>
    <string name="onlyBullet"><![CDATA[<b><font color=#000000>\u25CF</font></b> ]]></string>
    <string name="open_the_prankpluse_app_on_your_device">Open the PrankPulse app on your device.</string>
    <string name="ad">Ad</string>
    <string name="scroll_through_the_list_of_hilarious_sounds_available_in_the_app_each_sound_is_tailored_for_maximum_comedic_impact">Scroll through the list of hilarious sounds available in the app. Each sound is tailored for maximum comedic impact!</string>
    <string name="watch_a_video_to_unlock_hilarious_prank_sound_and_experience_the_immediate_burst_of_laughter_or_surprise">Watch a video to unlock hilarious prank sound and experience the immediate burst of laughter or surprise!</string>
    <string name="watch_an_ad_to_unlock_hilarious_prank_sound">Watch an ad to unlock hilarious prank sound!</string>
    <string name="watch_now">Watch Now</string>
    <string name="get_ready_for_a_world_of_laughter_and_mischief_with_our_hilarious_sound_collection">Get ready for a world of laughter and mischief with\nour hilarious sound collection.</string>
    <string name="your_unlimited_prank_sound_app">Your Ultimate Prank Sound App!</string>
    <string name="volume">Volume</string>
    <string name="banner">banner</string>
    <string name="is_currently_not_available_in_your_country">is currently not available in your country.</string>
    <string name="app_01">prank.funny.sounds.ca</string>
    <string name="app_02">crack.pixel.prank.ca</string>
    <string name="air_horn">Air Horn</string>
    <string name="car">Car</string>
    <string name="police_siren">Police Siren</string>
    <string name="sneezing">Sneezing</string>
    <string name="party_horn">Party Horn</string>
    <string name="fart">Fart</string>
    <string name="school_bell">School Bell</string>
    <string name="whistle">Whistle</string>
    <string name="coughing">Coughing</string>
    <string name="where_prank_meet">where pranks meet pixels!</string>
    <string name="turn_shattered">Turn shattered screens into fits of laughter, with CrackedPixel -</string>
    <string name="dive_into_the_world_of_tic_tac_toe_with_xs_and_os_a_sleek">Dive into the world of Tic Tac Toe with Xs and Os, a sleek and modern take on the beloved classic.</string>
    <string name="xs_and_os_presents_an_intuitive_polished">Xs and Os presents an intuitive,polished interface that brings this beloved game right to your fingertips, ensuring endless entertainment.</string>
    <string name="challenge_a_friend">Challenge\na friend</string>
    <string name="with_ai">With AI</string>
    <string name="challenge_your_friends_or_test_your_skills">Challenge your friends or test your skills against our intelligent AI opponent.</string>
    <string name="play_modes">Play Modes:</string>
    <string name="single_player_challenge_our_ai_opponent_sharpen_your_skills">Single Player: Challenge our AI opponent. Sharpen your skills!</string>
    <string name="multiplayer_face_off_against_friends_for_a_thrilling_battle">Multiplayer: Face off against friends for a thrilling battle.</string>
    <string name="choose_your_play_mode">Choose Your Play Mode</string>
    <string name="manage_data_preferences">Manage Data Preferences</string>
    <string name="do_not_sell_my_personal_information">Do not sell my Personal Information.</string>
    <string name="we_use_device_identifiers_like_cookies">We use device identifiers (like cookie, beacons, and IP addresses) to improve our app and customize your experience. This sharing of data may be defined as a sale under various data privacy laws and regulations.</string>
    <string name="opt_out">Opt Out</string>
    <string name="close">Close</string>
    <string name="you_have_successfully_opted_out">You have successfully opted out!</string>
    <string name="we_re_sorry_to_see_you_go_but">We\'re sorry to see you go, but %1s app has placed an opt out cookie in the app.\n\nThis cookie will prevent %1s app from tailoring the ads you see based on the anonymous information and also prohibit services to collect or process your personal information for any marketing purposes.\n\n%1s app collects, as described further in our <font color="#fcc941">Privacy Policy</font>.\n\nThis opt-out applies only to this app and to this android device, and you must repeat the process if you switch to a different android device.</string>
    <string name="you_have_the_right_to_opt_out_of_the_sale">You have the right to opt out of the sale of your personal information to third parties. Our Privacy Policy describes the right in detail.</string>
    <string name="merge_match_master">Merge, Match, Master</string>
    <string name="prepare_for_a_brain_teasing_adventure_that_offers"><![CDATA[<b>Prepare for a brain-teasing adventure</b> that offers a fusion of fun and strategic puzzle play.]]></string>
    <string name="score">Score</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="learn_more_about"><u>Learn more about how we use cookie.</u></string>
    <string name="consent_dialog_text">You may see ads that are less relevant to you. These ads use cookie, but not for personalization. We also use analytics tools to collect information for marketing, statistical and functional purposes.\nWe need your consent to proceed.</string>
    <string name="unleash_speed_conquer_tracks">Stack, Play, Achieve!</string>
    <string name="your_mission_navigate_the_tracks_without_a_single_crash">Your mission: navigate the tracks without a single crash</string>
    <string name="app_10">crashfree.car.racing.ca</string>
    <string name="ready_to_play">Ready to Play?</string>
    <string name="just_watch_an_ad_to_start_the_game">Just watch an ad to start the game.</string>
    <string name="well_played">Well Played!</string>
    <string name="well_done">Fantastic\nwork!</string>
    <string name="just_watch_an_ad_to_play_again_and_beat_your_score">Just watch an ad to start another game!</string>
    <string name="just_watch_an_ad_to_play_feather">Just watch an ad to play again, \nand beat your score!</string>
    <string name="ready_for_another_round">Ready for another round?</string>
    <string name="app_1">prank.funny.sounds.ca</string>
    <string name="app_2">crack.pixel.prank.ca</string>
    <string name="app_4">tictactoe.puzzle.game.ca</string>
    <string name="app_11">cubeclimb.tower.casualgames.ca</string>
    <string name="app_12">bubbleshooter.adventure.game.ca</string>
    <string name="app_14">featherflight.arcade.games.ca</string>
    <string name="app_15">tangytwist.casualgames.fungames.ca</string>
    <string name="app_16">rapid.racer.cargames.ca</string>
    <string name="app_13">game.tic.tactoe.ca</string>
    <string name="app_5">flashlight.torch.tools.ca</string>
    <string name="app_6">merge2048.game.puzzle.ca</string>
    <string name="app_20">breakitup.brokenscreenprank.entertainment.ca</string>
    <string name="app_22">popmaster.adventure.bubbleshooter.ca</string>
    <string name="app_8">pacman.arcade.casual.ca</string>
    <string name="app_19">phonefinder.utility.findmyphone.ca</string>
    <string name="app_17">humor.funnysounds.pranks.ca</string>
    <string name="app_21">ninjatarget.fruitknife.casualgames.ca</string>
    <string name="app_23">tetrastack.blockpuzzle.games.ca</string>
    <string name="app_24">chopfruits.action.casualgames.ca</string>
    <string name="app_25">candydash.casualgames.puzzle.ca</string>
    <string name="app_26">cosmicchaos.arcade.casualgames.ca</string>
    <string name="app_28">hexarhythm.puzzle.casualgames.ca</string>
    <string name="app_29">beewing.arcade.casualgames.ca</string>
    <string name="app_30">towerofflames.adventure.casualgames.ca</string>
    <string name="app_31">cloudhopper.adventure.arcade.ca</string>
    <string name="app_33">prismpearls.puzzle.casualgames.ca</string>
    <string name="app_36">liquidsort.puzzle.casualgames.ca</string>
    <string name="app_35">memoryriddle.puzzle.casualgames.ca</string>
    <string name="app_38">funnysounds.pranks.entertainment.ca</string>
    <string name="app_39">investment.finance.tool.ca</string>
    <string name="app_42">cam2text.tools.productivity.ca</string>
    <string name="app_44">sensors.soundmeter.tools.ca</string>
    <string name="app_46">activitycounter.tracker.tools.ca</string>
    <string name="app_47">qrscanner.barcode.tools.ca</string>
    <string name="app_49">drumjam.music.audio.ca</string>
    <string name="app_50">dice.board.casualgames.ca</string>
    <string name="app_51">theftalert.security.tools.ca</string>
    <string name="app_52">quicklap.stopwatch.pro.ca</string>
    <string name="app_53">turbotask.management.tools.ca</string>
    <string name="app_54">prank.speedcheck.entertainment.ca</string>
    <string name="app_55">jokes.funny.entertainment.ca</string>
    <string name="ready_to_stack_up_some_more_points">Ready for more?</string>
    <string name="build_your_empire_block_by_block_in_the_game_that_defies_gravity"><![CDATA[<font color="#FF57FF">Get Set,<br></font><font color="#3EFDFD">Break It Up!</font>]]></string>
    <string name="is_not_currently_not">is currently not available in \n your country.</string>
    <string name="want_more_points">Want more points?</string>
    <string name="tap_appearing_fruits_on_the_screen">Tap appearing fruits on the screen.</string>
    <string name="gameplay_time">Gameplay Time:</string>
    <string name="players_have_only_10_seconds">Players have only 10 seconds.</string>
    <string name="additional_time">Additional Time:</string>
    <string name="successfully_catching_a_fruit_extends_the_timer_by_an_extra_0_2_seconds">Successfully catching a fruit extends the timer by an extra 0.2 seconds.</string>
    <string name="just_watch_an_ad_to_start_a_new_game_and_beat_your_record">Just watch an ad to start a new \ngame and beat your record!</string>
    <string name="great_score">Great Score!</string>
    <string name="ready_to_play_again">Ready to play again?</string>
    <string name="how_to_get_started">How to Get Started:</string>
</resources>