<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dahboard_bg">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_27sdp"
        android:layout_height="@dimen/_27sdp"
        android:layout_margin="@dimen/_13sdp"
        android:contentDescription="@string/image"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivOne"
        android:layout_width="@dimen/_232sdp"
        android:layout_height="@dimen/_173sdp"
        android:layout_marginTop="@dimen/_83sdp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY"
        android:src="@drawable/ip_screen_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleSubHeading"
        style="@style/TextStyle6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_36sdp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOne" />

    <TextView
        android:id="@+id/tvIsNotCurrently"
        style="@style/TextStyle17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/is_not_currently_not"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSubHeading" />
</androidx.constraintlayout.widget.ConstraintLayout>