<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llmaindialoglayout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/roundedshep_box"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitleHeading"
            android:text="@string/consent_dialog_text"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textColor="@color/color_202020"
            />
        <RelativeLayout
            android:id="@+id/rlmore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleHeading"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp" >
            <ImageView
                android:id="@+id/iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrr"
                android:layout_marginTop="4dp"/>
            <TextView
                android:id="@+id/tvlearnmore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/learn_more_about"
                android:textColor="@color/color_8000FF"
                android:layout_toRightOf="@+id/iv"
                android:layout_marginLeft="@dimen/_5sdp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rllearn_deatils"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300sdp"
            android:background="@drawable/rectanglethemebox"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            android:visibility="gone">
            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rectanglethemebox"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp">
            <Button
                android:id="@+id/allow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                app:backgroundTint="@color/color_8000FF"
                app:cornerRadius="@dimen/_10sdp"
                android:text="@string/allow"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/deny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_36454F"
                app:backgroundTint="@color/white"
                app:cornerRadius="@dimen/_10sdp"
                android:text="@string/deny"
                android:layout_marginTop="@dimen/_20sdp"
                android:padding="@dimen/_10sdp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_toLeftOf="@+id/allow"
                android:layout_marginRight="@dimen/_10sdp"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>

