<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvHeading"
            style="@style/TextStyle5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_45sdp"
            android:text=""/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBox"
            android:layout_width="@dimen/_231sdp"
            android:layout_height="@dimen/_177sdp"
            android:layout_marginTop="@dimen/_26sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHeading"
            app:srcCompat="@drawable/ic_splash_second" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextStyle7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_26sdp"
            android:text="@string/prankpulse"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBox" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/TextStyle8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_28sdp"
            android:gravity="center_horizontal"
            android:includeFontPadding="false"
            android:text="@string/get_ready_to_add_a_dash_of_humor_to_your_day_with_our_collection_of_hilarious_prank_sounds"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvAd"
            style="@style/TextStyle11"
            android:layout_width="@dimen/_13sdp"
            android:layout_height="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_minus4sdp"
            android:gravity="end"
            android:includeFontPadding="false"
            android:text="@string/ad"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/constraintBtn"
            app:layout_constraintEnd_toEndOf="@+id/constraintBtn"
            app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintBtn"
            android:layout_width="@dimen/_202sdp"
            android:layout_height="@dimen/_49sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:background="@drawable/get_started_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/_70sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tvGetStarted"
                style="@style/TextStyle9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/get_started"
                android:layout_marginTop="@dimen/_5sdp"
                android:includeFontPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_38sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_40sdp"
            android:checked="true"
            android:paddingBottom="@dimen/_15sdp"
            android:theme="@style/NewCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintBtn" />

        <TextView
            android:id="@+id/tvPleaseAgree"
            style="@style/TextStyle10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_minus16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:gravity="start"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="0dp"
            android:text="@string/tnc_span"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/checkBox"
            app:layout_constraintTop_toTopOf="@+id/checkBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>